crates/sui-prover/tests/snapshots/sum_slice_range/sum.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
assertion_line: 303
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/sum_slice_range/sum.fail.move:20:5
   │
20 │     ensures(v2_sum == ELIDEDu64.to_int());
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/sum_slice_range/sum.fail.move:17: test_sum
